rsass/tests/spec/libsass_todo_tests/errors/import/url/mixin/control_else/mod.rs
//! Tests auto-converted from "sass-spec/spec/libsass-todo-tests/errors/import/url/mixin/control-else"

#[allow(unused)]
fn runner() -> crate::TestRunner {
    super::runner().with_cwd("control-else")
}

mod inside;
